# Immediate-Contact

./: 10测试用例.xls  README.md  database.rtf  function.docx  server.c  update_record.txt  第7组_人员配置表.xls  第7组_会议记录.doc  第7组_答辩.pptx  第7组_需求理解一览表（0828更新）.xls  第7组_项目计划.xls  第7组概要设计说明书.doc  第7组模块详细设计说明书.doc
0935_源代码/UImain_temp1/: CMakeCache.txt  CMakeLists.txt  LogSign.cpp  LogSign.h  Makefile  UImain.cpp  UImain.h  UImain_temp  UImain_temp.cbp  UImain_temp1  UImain_temp1.cbp  actwithface.cpp  client.h  cmake_install.cmake  handle.cpp  main.cpp
0935_源代码/client/: CMakeCache.txt  LogSign.cpp  LogSign.h  Makefile  UImain.cpp  UImain.h  UImain_temp  UImain_temp.cbp  actwithface.cpp  client.h  cmake_install.cmake  handle.cpp  main.cpp
0935_源代码/server/: CMakeCache.txt  cmake_install.cmake  server  seven_chat_server.cbp
0935_源代码/seven_chat_server1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  server  server_chat_server1  seven_chat_server.cbp  seven_chat_server1.cbp
UImain_temp/: CMakeCache.txt  CMakeLists.txt  LogSign.cpp  LogSign.h  Makefile  UImain.cpp  UImain.h  UImain_temp  UImain_temp.cbp  actwithface.cpp  client.h  cmake_install.cmake  handle.cpp  main.cpp  setting.cpp  setting.h
client/: .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  client  client.c  client.cpp  client.h  cmake_install.cmake  logSignUI.cpp  main.cpp  mainUI.cpp
client/include/: client.h  logSignUI.h  mainUI.h
client/util/: CMakeLists.txt  Makefile  cmake_install.cmake
server/: CMakeCache.txt  CMakeLists.txt  Command.cpp  Demo  Init.c  Init.cpp  Login_out_register.c  Login_out_register.cpp  Makefile  cmake_install.cmake  command.c  command.cpp  friends  friends.cpp  friendsController.cpp  gc  gmc  gmessage.cpp  gmessageController.cpp  group.cpp  groupController.cpp  main  main.c  main.cpp  mc  message  message.cpp  messageController.cpp  sc  sectionController.cpp  send.c  send.cpp  server  seven_chat_server.cbp  tempCodeRunnerFile.cpp  uc  ugc  user.cpp  userController.cpp  userGroupController.cpp  (+1 more)
server/include/: CMakeLists.txt  Command.cpp  Init.cpp  Login_out_register.cpp  Makefile  cmake_install.cmake  friends.cpp  friends.h  gmessage.cpp  gmessage.h  group.cpp  group.h  groupController.cpp  message.cpp  message.h  section.cpp  section.h  server.h  user.cpp  user.h  userGroup.cpp  userGroup.h
个人日报/: 个人日报(邵雨洁).xls  个人日报书（马文聪）.xls  个人日报（丁颖）.xls  个人日报（常欣煜）.xls  个人日报（李可）.xls  个人日报（李心志）.xls  个人日报（杨训迪）.xls  个人日报（肖成文）.xls
实训报告/: 实训报告（马文聪）.docx
环评总结/行业解决方案对环境和可持续发展影响分析报告-7组/: 行业解决方案对环境和可持续发展影响分析报告-丁颖.docx  行业解决方案对环境和可持续发展影响分析报告-常欣煜.docx  行业解决方案对环境和可持续发展影响分析报告-李可.docx  行业解决方案对环境和可持续发展影响分析报告-李心志.docx  (+4 more)
(+24 files in other folders)
